--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
     </div>
     <div class="article_four_dim">
-      <a href="#">The 4th Dimension EXplained by a High School Student</a>
+      <a href="#">The 4th Dimension Explained by a High School Student</a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris <br>
