--- a/bollydoro.html
+++ b/bollydoro.html
@@ -32,7 +32,7 @@
           </div>
         </header>
         <nav class="l-side-nav">
-          <ul class="side-nav">
+          <ul class="side-nav"
             <li class="is-active"><span></span></li>
             <li><span>intro</span></li>
             <li><span>one</span></li>
@@ -61,7 +61,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Many have heard of the pomodoro method. The goal: Work/Study for 25 minutes, the proceed to have a 5 minute break. I’ve tried this, and really, it just doesn’t work for me. 5 minutes is just not enough time to do anything. Thus, I created the Bollydoro method. A method that allows you to watch your favorite Bollywood movie and get your work done.</h2>
+                            <h3>Many have heard of the pomodoro method. The goal: Work/Study for 25 minutes, the proceed to have a 5 minute break. I’ve tried this, and really, it just doesn’t work for me. 5 minutes is just not enough time to do anything. Thus, I created the Bollydoro method. A method that allows you to watch your favorite Bollywood movie and get your work done.</h3>
                         </div>
                       </div>
                 </div>
@@ -78,7 +78,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>The very first part of this technique is to work for 40 minutes. And I mean WORK. Full focus, no distractions, do everything in your power to work. Watch those review videos, and do those review questions. Work on that blog post, or code for this period of time. But WORK.</h2>
+                            <h3>The very first part of this technique is to work for 40 minutes. And I mean WORK. Full focus, no distractions, do everything in your power to work. Watch those review videos, and do those review questions. Work on that blog post, or code for this period of time. But WORK.</h3>
                         </div>
                       </div>
                 </div>
@@ -95,7 +95,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Next you’re going to multitask for 30 minutes. Put a Bollywood movie on to your computer or TV in front of you, and watch the movie while also doing work. This can be the trickiest, but you have to work alongside watching. </h2>
+                            <h3>Next you’re going to multitask for 30 minutes. Put a Bollywood movie on to your computer or TV in front of you, and watch the movie while also doing work. This can be the trickiest, but you have to work alongside watching. </h3>
                         </div>
                       </div>
                 </div>
@@ -112,7 +112,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Finally, you get a full 15 minutes of watching your Bollywood movie. After these 15 minutes are up, you can repeat the cycle for as long as you want to. </h2>
+                            <h3>Finally, you get a full 15 minutes of watching your Bollywood movie. After these 15 minutes are up, you can repeat the cycle for as long as you want to. </h3>
                         </div>
                       </div>
                 </div>
@@ -130,7 +130,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2> Now not only can you watch DDLJ or 3 Idiots, but you can also finish Unit 3 for you computer science class or finish your PreCalc homework.</h2>
+                            <h3> Now not only can you watch DDLJ or 3 Idiots, but you can also finish Unit 3 for you computer science class or finish your PreCalc homework.</h3>
                         </div>
                       </div>
                 </div>
