--- a/growup.html
+++ b/growup.html
@@ -59,7 +59,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>We have all been asked, “What do you want to be when you grow up?”, and I believe I can can help you find out how to answer that question. Finding your purpose later in life is an extremely difficult question, but in this article we’ll look at possible ways to narrow your scope of career interests. I tried this when I was younger, and to this day, have not changed my mind about my choice. Let’s get started!</h2>
+                            <h3>We have all been asked, “What do you want to be when you grow up?”, and I believe I can can help you find out how to answer that question. Finding your purpose later in life is an extremely difficult question, but in this article we’ll look at possible ways to narrow your scope of career interests. I tried this when I was younger, and to this day, have not changed my mind about my choice. Let’s get started!</h3>
                         </div>
                       </div>
                 </div>
@@ -76,7 +76,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Ask yourself these 4 questions:
+                            <h3>Ask yourself these 4 questions:
                                 <br>
                                 What do I like?
                                 <br>
@@ -84,7 +84,7 @@
                                 <br>
                                 What does the world need?
                                 <br>
-                                What makes money?</h2>
+                                What makes money?</h3>
                         </div>
                       </div>
                 </div>
@@ -101,7 +101,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>After you answer these 4 questions, I want you to find similarities in between each question and highlight it. It narrows down you scope of what you should be looking into. Now, search up jobs that are within this scope. For example, 12 year old me had “tech” and “helping the world” as two similarities, so I found tech jobs that are currently affecting the world.h2>
+                            <h3>After you answer these 4 questions, I want you to find similarities in between each question and highlight it. It narrows down you scope of what you should be looking into. Now, search up jobs that are within this scope. For example, 12 year old me had “tech” and “helping the world” as two similarities, so I found tech jobs that are currently affecting the world.</h3>
                         </div>
                       </div>
                 </div>
