--- a/debug.html
+++ b/debug.html
@@ -64,7 +64,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Here you are. You’re probably stuck in you program and need to debug. Debugging is a term used for the skill of identifying and fixing issues within you code. Debugging is known for being time-consuming and people-consuming (the amount of times I have seen someone in my computer science class cry is far too many). So why don’t we look at possible techniques and tips for you to become a master at debugging, and not falling down the tunnel of coder’s despair.</h2>
+                            <h3>Here you are. You’re probably stuck in you program and need to debug. Debugging is a term used for the skill of identifying and fixing issues within you code. Debugging is known for being time-consuming and people-consuming (the amount of times I have seen someone in my computer science class cry is far too many). So why don’t we look at possible techniques and tips for you to become a master at debugging, and not falling down the tunnel of coder’s despair</h3>
                         </div>
                       </div>
                 </div>
@@ -81,7 +81,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>To fix the problem, you’re gonna have to know what the problem is. The biggest clue is normally a compiler or a console. Certain programming languages have compilers like Java, the issue is presented in big, bold letters in the console. For non-compiler languages, this can get hard. Instead of a compiler, try to print something in the console, and see if it prints.</h2>
+                            <h3>To fix the problem, you’re gonna have to know what the problem is. The biggest clue is normally a compiler or a console. Certain programming languages have compilers like Java, the issue is presented in big, bold letters in the console. For non-compiler languages, this can get hard. Instead of a compiler, try to print something in the console, and see if it prints</h3>
                         </div>
                       </div>
                 </div>
@@ -98,7 +98,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2> Now isolate the issue in another window, and try to solve it. If you make changes in the main program, you risk messing everything up, but with a separated code snippet, you solve the issue in sections. After breaking the code into smaller pieces and working out the issues, you can put the code all back into the main program like a gigantic puzzle. Divide and Conquer, my friend.</h2>
+                            <h3> Now isolate the issue in another window, and try to solve it. If you make changes in the main program, you risk messing everything up, but with a separated code snippet, you solve the issue in sections. After breaking the code into smaller pieces and working out the issues, you can put the code all back into the main program like a gigantic puzzle. Divide and Conquer, my friend</h3>
                         </div>
                       </div>
                 </div>
@@ -115,7 +115,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Always comment changes made or commit changes within the document with Git. You aren’t going to sit down and work out faulty code all in one go. You’re probably going to need to take breaks and refresh yourself, so committing and logging changes made can not only help you, but others.</h2>
+                            <h3>Always comment changes made or commit changes within the document with Git. You aren’t going to sit down and work out faulty code all in one go. You’re probably going to need to take breaks and refresh yourself, so committing and logging changes made can not only help you, but others</h3>
                         </div>
                       </div>
                 </div>
@@ -132,7 +132,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>My 7th grade computer science teacher had a poster that said “In Stack Overflow We Trust”. A quote has never resonated with me so much. But, seriously, if you really can’t figure a problem out, search it up. Put the error that appeared in the compiler into Google, and you are bound to get an answer. If there is no answer, try creating a new post of StackOverflow or StackExchange.</h2>
+                            <h3>My 7th grade computer science teacher had a poster that said “In Stack Overflow We Trust”. A quote has never resonated with me so much. But, seriously, if you really can’t figure a problem out, search it up. Put the error that appeared in the compiler into Google, and you are bound to get an answer. If there is no answer, try creating a new post of StackOverflow or StackExchange</h3>
                         </div>
                       </div>
                 </div>
@@ -149,7 +149,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Sometimes one pair of eyes isn’t enough. Try getting a friend, college,  or teacher to look over your code. There are even websites and forums with people that are willing to help such as StackOverflow and StackExchange. But having a physical person next to you, to give you real time advice, is a lot better in my opinion. Have a coding buddy or teacher that you can turn to in times of anguish, and they are bound to see something you don’t.</h2>
+                            <h3>Sometimes one pair of eyes isn’t enough. Try getting a friend, college,  or teacher to look over your code. There are even websites and forums with people that are willing to help such as StackOverflow and StackExchange. But having a physical person next to you, to give you real time advice, is a lot better in my opinion. Have a coding buddy or teacher that you can turn to in times of anguish, and they are bound to see something you don’t</h3>
                         </div>
                       </div>
                 </div>
@@ -166,7 +166,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>I know, nobody wants to look at documentation, but sometimes you really need to. One time my uncle, a software developer, needed to use a Python sorting framework. The framework was created years ago. My uncle struggled for a week before he looked at the documentation for the framework. Within an hour, he had solved the framework issue and successfully sorted the data needed. Honestly, documentation is like a roadmap for any programming language.</h2>
+                            <h3>I know, nobody wants to look at documentation, but sometimes you really need to. One time my uncle, a software developer, needed to use a Python sorting framework. The framework was created years ago. My uncle struggled for a week before he looked at the documentation for the framework. Within an hour, he had solved the framework issue and successfully sorted the data needed. Honestly, documentation is like a roadmap for any programming language</h3>
                         </div>
                       </div>
                 </div>
@@ -183,7 +183,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>It might sound corny, but staying positive is what keeps one going. When you feel in despair during programming as you fail to debug, try taking a break and reviving that positive attitude. With a negative attitude, you will fail. So turn that frown upside down, and try looking at the positive side of things. A pessimist will never be able to solve a problem, but an optimist can.</h2>
+                            <h3>It might sound corny, but staying positive is what keeps one going. When you feel in despair during programming as you fail to debug, try taking a break and reviving that positive attitude. With a negative attitude, you will fail. So turn that frown upside down, and try looking at the positive side of things. A pessimist will never be able to solve a problem, but an optimist can</h3>
                         </div>
                       </div>
                 </div>
@@ -200,7 +200,7 @@
                   <span class="options-a">
                     <div class="article">
                         <div>
-                            <h2>Debugging is an integral part of the programming journey. By employing the tips listed above, you can become a more proficient debugger. Remember, debugging is not just about fixing problems but also about honing your problem-solving skills and gaining a deeper understanding of your codebase. Embrace the challenge, stay persistent, and keep sharpening</h2>
+                            <h3>Debugging is an integral part of the programming journey. By employing the tips listed above, you can become a more proficient debugger. Remember, debugging is not just about fixing problems but also about honing your problem-solving skills and gaining a deeper understanding of your codebase. Embrace the challenge, stay persistent, and keep sharpening</h3>
                         </div>
                       </div>
                 </div>
