--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <div class="modal--information">
                     <h1>About Me</h1>
                     <p>Maninder Kaur</p>
-                    <p>Stressed High School Junior</p>
+                    <p>Stressed High School Senior</p>
                     <p>Robotics Fanatic</p>
                     <p>Amateur Skateboarder</p>
                     <p>Black Belt in TaeKwonDo</p>
