fixed resume section

--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
               <h4>Bachelors in CS &amp; Math</h4>
               <h5>2024 - Present</h5>
               <p><em>Purdue University - Main Campus</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Currently studying at Purdue University and aiming for a B.S in Computer Science and a Minor in Mathamatics. I am currently a Frank O'Bannon scholorship recipient and on the Board of the Purdue Indy ARC and the President of the IndyApps club.</p>
             </div>
             <div class="resume-item">
               <h4>Core 40 Honors High School Diploma</h4>
               <h5>2020-2024</h5>
               <p><em>Hamilton Southeastern High School</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>Graduated Magna Cum Laude from HSE. Was apart of Speech and Debate, Science Olympiad, Robotics, CSHS, and NHS.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -280,6 +280,16 @@
               <p><em>IoT Lab, Fishers</em></p>
               <ul>
                 <li>Embarked on a personal project focused on developing a robust encryption algorithminspired by number theory portrayed in Sudoku puzzles, aimed at gaining acomprehensive understanding of the intricate principles underlying computer encryptiontechniques.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Data Science Intern</h4>
+              <h5>Aug 2024 - May 2025</h5>
+              <p><em>Indiana Fever</em></p>
+              <ul>
+                <li>Developed and implemented data-driven models for player performance analysis, game strategy optimization, and injury
+                prevention using advanced statistical techniques. Collaborated with coaches and analysts to deliver actionable insights
+                from large datasets, enhancing team decision-making and overall performance.</li>
               </ul>
             </div>
           </div>
