Update2 testblog.html

--- a/testblog.html
+++ b/testblog.html
@@ -75,6 +75,11 @@
         </div>
       </div>
     </div>
+    <div class="text-center mt-4">
+      <a href="blog.html" class="btn btn-primary">
+        See More
+      </a>
+    </div>
   </div>
 </section>
 <!-- End Blog Section -->
