--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@
       </div>
     </section><!-- End Resume Section -->
 
+
+    
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
@@ -380,6 +382,92 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- Blog Section -->
+  <section id="blog" class="blog">
+    <div class="container">
+      <div class="section-title">
+        <h2>
+          Blog
+        </h2>
+        <p>
+          Welcome to my blog! Here, I share insights, experiences, and thoughts
+          on various topics ranging from technology to personal development. Join
+          me on this journey of exploration and learning!
+        </p>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 blog-item" data-aos="fade-up">
+          <div class="blog-wrap">
+            <img src="assets/img/blog/blog-1.jpg" class="img-fluid" alt="">
+            <div class="blog-info">
+              <h3>
+                <a href="blog-post-1.html">
+                  Understanding the Basics of Web Development
+                </a>
+              </h3>
+              <p>
+                A beginner's guide to web development, covering essential concepts and
+                tools.
+              </p>
+              <a href="blog-post-1.html" class="read-more">
+                <i class="bx bx-arrow-to-right">
+                </i>
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 blog-item" data-aos="fade-up" data-aos-delay="100">
+          <div class="blog-wrap">
+            <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
+            <div class="blog-info">
+              <h3>
+                <a href="blog-post-2.html">
+                  The Future of Artificial Intelligence
+                </a>
+              </h3>
+              <p>
+                Exploring the potential impacts of AI on various industries and society
+                as a whole.
+              </p>
+              <a href="blog-post-2.html" class="read-more">
+                <i class="bx bx-arrow-to-right">
+                </i>
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 blog-item" data-aos="fade-up" data-aos-delay="200">
+          <div class="blog-wrap">
+            <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
+            <div class="blog-info">
+              <h3>
+                <a href="blog-post-3.html">
+                  Tips for Effective Time Management
+                </a>
+              </h3>
+              <p>
+                Strategies to enhance productivity and manage your time effectively.
+              </p>
+              <a href="blog-post-3.html" class="read-more">
+                <i class="bx bx-arrow-to-right">
+                </i>
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <a href="blog.html" class="btn btn-primary">
+          See More
+        </a>
+      </div>
+    </div>
+  </section>
+  <!-- End Blog Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
