create blog landing page

--- a/index.html
+++ b/index.html
@@ -392,8 +392,7 @@
         </h2>
         <p>
           Welcome to my blog! Here, I share insights, experiences, and thoughts
-          on various topics ranging from technology to personal development. Join
-          me on this journey of exploration and learning!
+          on various topics ranging from technology to personal development.
         </p>
       </div>
       <div class="row">
@@ -403,11 +402,11 @@
             <div class="blog-info">
               <h3>
                 <a href="blog-post-1.html">
-                  Understanding the Basics of Web Development
+                  Dijkstra's Algorithm: A Concept Explained
                 </a>
               </h3>
               <p>
-                A beginner's guide to web development, covering essential concepts and
+                A beginner's guide to Dijkstra's algorithm, covering essential concepts and
                 tools.
               </p>
               <a href="blog-post-1.html" class="read-more">
@@ -424,12 +423,11 @@
             <div class="blog-info">
               <h3>
                 <a href="blog-post-2.html">
-                  The Future of Artificial Intelligence
+                  The Genius of Lethal Company
                 </a>
               </h3>
               <p>
-                Exploring the potential impacts of AI on various industries and society
-                as a whole.
+                Exploring the potential genius storytelling of one of my favorite horror comedy video games.
               </p>
               <a href="blog-post-2.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
@@ -445,11 +443,11 @@
             <div class="blog-info">
               <h3>
                 <a href="blog-post-3.html">
-                  Tips for Effective Time Management
+                  Media that Every CS Student Needs to Consume
                 </a>
               </h3>
               <p>
-                Strategies to enhance productivity and manage your time effectively.
+                A list of articles, shows, etc. that I think every fellow computer science student should indulge in.
               </p>
               <a href="blog-post-3.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
