--- a/blog.html
+++ b/blog.html
@@ -2,78 +2,151 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Blog - Maninder Kaur</title>
-    <link rel="icon" href="assets/img/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>portfolio</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <!-- Header -->
-    <header id="header">
-        <div class="container">
-            <h1>My Blog</h1>
-            <p>Welcome to my blog! Here, I share insights, experiences, and thoughts on various topics ranging from technology to personal development.</p>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+
+  <!-- ======= Header ======= -->
+  <header id="header">
+    <div class="d-flex flex-column">
+
+      <div class="profile">
+        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Maninder Kaur</a></h1>
+        <div class="social-links mt-3 text-center">
+            <a href="https://x.com/manindermakes" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.instagram.com/manindermakesstuff/" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/maninder-kaur-9b87b7240" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
-    </header>
+      </div>
 
-    <!-- Blog Section -->
-    <main id="main">
-        <section id="blog" class="blog">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 blog-item">
-                        <div class="blog-wrap">
-                            <img src="assets/img/blog/blog-1.jpg" class="img-fluid" alt="">
-                            <div class="blog-info">
-                                <h3><a href="blog-post-1.html">Dijkstra's Algorithm: A Concept Explained</a></h3>
-                                <p>A beginner's guide to Dijkstra's algorithm, covering essential concepts and tools.</p>
-                                <a href="blog-post-1.html" class="read-more">Read More</a>
-                            </div>
-                        </div>
-                    </div>
+      <nav id="navbar" class="nav-menu navbar">
+        <ul>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        </ul>
+      </nav><!-- .nav-menu -->
+    </div>
+  </header><!-- End Header -->
 
-                    <div class="col-lg-4 col-md-6 blog-item">
-                        <div class="blog-wrap">
-                            <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
-                            <div class="blog-info">
-                                <h3><a href="blog-post-2.html">The Genius of Lethal Company</a></h3>
-                                <p>Exploring the potential genius storytelling of one of my favorite horror comedy video games.</p>
-                                <a href="blog-post-2.html" class="read-more">Read More</a>
-                            </div>
-                        </div>
-                    </div>
+  <main id="main">
 
-                    <div class="col-lg-4 col-md-6 blog-item">
-                        <div class="blog-wrap">
-                            <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
-                            <div class="blog-info">
-                                <h3><a href="blog-post-3.html">Media that Every CS Student Needs to Consume</a></h3>
-                                <p>A list of articles, shows, etc. that I think every fellow computer science student should indulge in.</p>
-                                <a href="blog-post-3.html" class="read-more">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    <!-- ======= Breadcrumbs ======= -->
+    <section id="breadcrumbs" class="breadcrumbs">
+      <div class="container">
 
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="container">
-            <div class="copyright">
-                &copy; Copyright <strong><span>Maninder Kaur</span></strong>
-            </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Retro Tank Game</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>Retro Tank Game</li>
+          </ol>
         </div>
-    </footer>
 
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
+      </div>
+    </section><!-- End Breadcrumbs -->
+
+    <!-- ======= Blog Section ======= -->
+    <section id="blog" class="blog">
+        <div class="container">
+          <h2 class="text-center">Latest Articles</h2>
+          <div class="row gy-4">
+  
+            <div class="col-lg-4 col-md-6">
+              <div class="blog-item">
+                <img src="assets/img/blog/blog-1.jpg" alt="" class="img-fluid">
+                <h3><a href="article1.html">Understanding Web Development</a></h3>
+                <p>A deep dive into the world of web development, covering essential technologies and best practices.</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6">
+              <div class="blog-item">
+                <img src="assets/img/blog/blog-2.jpg" alt="" class="img-fluid">
+                <h3><a href="article2.html">The Future of AI</a></h3>
+                <p>Exploring the advancements in artificial intelligence and its impact on various industries.</p>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6">
+              <div class="blog-item">
+                <img src="assets/img/blog/blog-3.jpg" alt="" class="img-fluid">
+                <h3><a href="article3.html">Traveling on a Budget</a></h3>
+                <p>Tips and tricks for exploring the world without breaking the bank.</p>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </section><!-- End Blog Section -->
+  
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Maninder Kaur</span></strong>
+      </div>
+      <div class="credits">
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
+
+
+
+
+
+
