added links 2 blog

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <img src="assets/img/blog/blog-1.jpg" class="img-fluid" alt="">
             <div class="blog-info">
               <h3>
-                <a href="blog-post-1.html">
+                <a href="blog/dijkstras-algorithm-a-concept-explained.html">
                   Dijkstra's Algorithm: A Concept Explained
                 </a>
               </h3>
@@ -409,7 +409,7 @@
                 A beginner's guide to Dijkstra's algorithm, covering essential concepts and
                 tools.
               </p>
-              <a href="blog-post-1.html" class="read-more">
+              <a href="blog/dijkstras-algorithm-a-concept-explained.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
                 </i>
                 Read More
@@ -422,14 +422,14 @@
             <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
             <div class="blog-info">
               <h3>
-                <a href="blog-post-2.html">
+                <a href="blog/geniuslethalcompany.html">
                   The Genius of Lethal Company
                 </a>
               </h3>
               <p>
                 Exploring the potential genius storytelling of one of my favorite horror comedy video games.
               </p>
-              <a href="blog-post-2.html" class="read-more">
+              <a href="blog/geniuslethalcompany.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
                 </i>
                 Read More
@@ -442,14 +442,14 @@
             <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
             <div class="blog-info">
               <h3>
-                <a href="blog-post-3.html">
+                <a href="blog/mediacsstudent.html">
                   Media that Every CS Student Needs to Consume
                 </a>
               </h3>
               <p>
                 A list of articles, shows, etc. that I think every fellow computer science student should indulge in.
               </p>
-              <a href="blog-post-3.html" class="read-more">
+              <a href="blog/mediacsstudent.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
                 </i>
                 Read More
