--- a/index.html
+++ b/index.html
@@ -442,14 +442,14 @@
             <img src="assets/img/blog/blog-3.jpg" class="img-fluid" alt="">
             <div class="blog-info">
               <h3>
-                <a href="blog/mediacsstudent.html">
+                <a href="mediacsstudent.html">
                   Media that Every CS Student Needs to Consume
                 </a>
               </h3>
               <p>
                 A list of articles, shows, etc. that I think every fellow computer science student should indulge in.
               </p>
-              <a href="blog/mediacsstudent.html" class="read-more">
+              <a href="mediacsstudent.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
                 </i>
                 Read More
