format csmedia text

--- a/mediacsstudent.html
+++ b/mediacsstudent.html
@@ -26,6 +26,12 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <style>
+    #portfolio-details {
+      margin-left: 250px; /* Centers all text */
+    }
+
+  </style>
 </head>
 
 <body>
@@ -67,10 +73,9 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Retro Tank Game</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Retro Tank Game</li>
+            <li>Article</li>
           </ol>
         </div>
 
