--- a/mediacsstudent.html
+++ b/mediacsstudent.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>portfolio</title>
+  <title>Media that Every CS Student Needs to Consume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
