--- a/pd6.html
+++ b/pd6.html
@@ -43,7 +43,7 @@
         <h1 class="text-light"><a href="index.html">Maninder Kaur</a></h1>
         <div class="social-links mt-3 text-center">
             <a href="https://x.com/manindermakes" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.instagram.com/manindermakesstuff/" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.instagram.com/kaurmankodes/" class="instagram"><i class="bx bxl-instagram"></i></a>
             <a href="https://www.linkedin.com/in/maninder-kaur-9b87b7240" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
