golc article links

--- a/index.html
+++ b/index.html
@@ -422,14 +422,14 @@
             <img src="assets/img/blog/blog-2.jpg" class="img-fluid" alt="">
             <div class="blog-info">
               <h3>
-                <a href="blog/geniuslethalcompany.html">
+                <a href="geniuslethalcompany.html">
                   The Genius of Lethal Company
                 </a>
               </h3>
               <p>
                 Exploring the potential genius storytelling of one of my favorite horror comedy video games.
               </p>
-              <a href="blog/geniuslethalcompany.html" class="read-more">
+              <a href="geniuslethalcompany.html" class="read-more">
                 <i class="bx bx-arrow-to-right">
                 </i>
                 Read More
