--- a/blog.html
+++ b/blog.html
@@ -67,10 +67,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Retro Tank Game</h2>
-          <ol>
+          <h2>Blog</h2>
+          <ol style="margin-right: 25px;">
             <li><a href="index.html">Home</a></li>
-            <li>Retro Tank Game</li>
+            <li>Blog</li>
           </ol>
         </div>
 
@@ -94,16 +94,16 @@
             <div class="col-lg-4 col-md-6">
               <div class="blog-item">
                 <img src="assets/img/blog/blog-2.jpg" alt="" class="img-fluid">
-                <h3><a href="article2.html">The Future of AI</a></h3>
-                <p>Exploring the advancements in artificial intelligence and its impact on various industries.</p>
+                <h3><a href="geniuslethalcompany.html">The Genius of Lethal Company</a></h3>
+                <p>Exploring the potential genius storytelling of one of my favorite horror comedy video games.</p>
               </div>
             </div>
   
             <div class="col-lg-4 col-md-6">
               <div class="blog-item">
                 <img src="assets/img/blog/blog-3.jpg" alt="" class="img-fluid">
-                <h3><a href="article3.html">Traveling on a Budget</a></h3>
-                <p>Tips and tricks for exploring the world without breaking the bank.</p>
+                <h3><a href="mediacsstudent.html">Media that Every CS Student Needs to Consume</a></h3>
+                <p> A list of articles, shows, etc. that I think every fellow computer science student should indulge in.</p>
               </div>
             </div>
   
