--- a/blog.html
+++ b/blog.html
@@ -29,54 +29,54 @@
 </head>
 
 <body>
+  <div class="content-wrapper">
+    <!-- Header -->
+    <header id="header">
+      <div class="d-flex flex-column">
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Maninder Kaur</a></h1>
-        <div class="social-links mt-3 text-center">
-            <a href="https://x.com/manindermakes" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.instagram.com/kaurmankodes/" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/maninder-kaur-9b87b7240" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Blog</h2>
-          <ol style="margin-right: 25px;">
-            <li><a href="index.html">Home</a></li>
-            <li>Blog</li>
-          </ol>
+        <div class="profile">
+          <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+          <h1 class="text-light"><a href="index.html">Maninder Kaur</a></h1>
+          <div class="social-links mt-3 text-center">
+              <a href="https://x.com/manindermakes" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.instagram.com/kaurmankodes/" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/maninder-kaur-9b87b7240" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          </div>
         </div>
 
+        <nav id="navbar" class="nav-menu navbar">
+          <ul>
+            <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+            <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+            <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+            <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+            <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+            <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          </ul>
+        </nav><!-- .nav-menu -->
       </div>
-    </section><!-- End Breadcrumbs -->
+    </header>
 
+    <!-- Main -->
+    <main id="main">
+
+      <!-- ======= Breadcrumbs ======= -->
+      <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+
+          <div class="d-flex justify-content-between align-items-center">
+            <h2>Blog</h2>
+            <ol style="margin-right: 25px;">
+              <li><a href="index.html">Home</a></li>
+              <li>Blog</li>
+            </ol>
+          </div>
+
+        </div>
+      </section><!-- End Breadcrumbs -->
+
+      <!-- ======= Blog Section ======= -->
+      <section id="blog" class="blog">
     <!-- ======= Blog Section ======= -->
     <section id="blog" class="blog">
         <div class="container">
