--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Hey, I'm Maninder Kaur!</h3>
             <p class="fst-italic">
-              I'm a lot of things, but to sum them all up, I'm a creator. I build things that make peopole smile, make their lives easier, fill up my time, etc. 
+              I go by Kaurman (pronounced kaar·muhn)
             </p>
 
             <p>
-              I'm a 18 year old college student, robotics fanatic, amateur skateboarder, and someone that aspires to change the world! The words above barely scratch the surface of what I'm like. I am passionately immersed in the world of bringing ideas to life. My journey is driven by curiosity, creativity, and a relentless desire to explore new frontiers. Every day is an opportunity to craft something unique, share stories, and inspire others. Let's create something amazing together!
+              I'm a lot of things, but to sum them all up, I'm a creator. I build things that make peopole smile, make their lives easier, fill up my time, etc. I'm a 19 year old college student, robotics fanatic, amateur skateboarder, and someone that aspires to change the world! The words above barely scratch the surface of what I'm like. I am passionately immersed in the world of bringing ideas to life. My journey is driven by curiosity, creativity, and a relentless desire to explore new frontiers. Every day is an opportunity to craft something unique, share stories, and inspire others. Let's create something amazing together!
             </p>
           </div>
         </div>
