--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Working with Maninder was a game-changer for our project. Their development skills and eye for design transformed our vision into a stunning reality
+                  Working with Kaurman was a game-changer for our project. Their development skills and eye for design transformed our vision into a stunning reality
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -567,7 +567,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  An exceptional employee and a brilliant engineer, Maninder always goes above and beyond. Their technical expertise and problem-solving skills are unmatched
+                  An exceptional employee and a brilliant engineer, Kaurman always goes above and beyond. Their technical expertise and problem-solving skills are unmatched
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -580,7 +580,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Having Maninder on our team was a true asset. Their blend of development prowess and design acumen made our projects seamless and successful.
+                  Having Kaurman on our team was a true asset. Their blend of development prowess and design acumen made our projects seamless and successful.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
